# ProfessorGemini

./: .dockerignore  .env.example  .gitignore  Dockerfile  SCRIPTS.md  app.py  generateDeepDive.py  generate_topic.py  lexicon_additions.json  lexicon_terms.json  pyproject.toml  railway.toml  requirements.txt  syncNebula.js  syncRag.py
.streamlit/: config.toml
config/: __init__.py  settings.py
core/: __init__.py  bar_raiser.py  claude_client.py  context_loader.py  document_syncer.py  gemini_client.py  local_processing.py  perplexity_client.py  pipeline.py  qdrant_manager.py  rag_retriever.py  single_prompt_pipeline.py
scripts/: batch_lexicon.py  merge_lexicon.py
tests/: __init__.py  conftest.py  test_bar_raiser.py  test_claude_client.py  test_gemini_client.py  test_pipeline.py  test_settings.py
tests/unit/: test_file_utils.py  test_local_processing.py  test_logging_utils.py  test_perplexity_client.py  test_settings.py
utils/: __init__.py  file_utils.py  logging_utils.py
